<resources>
    <string name="app_name">Grocery</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="log_out">Log Out</string>
    <string name="profile_content">Click to edit profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="deliver">Deliver</string>
    <string name="deliver_description">Deliver</string>
    <string name="order_description">Image for Order</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders:</string>
    <string name="new_order">New Order</string>
    <string name="max_price">Maximum Price Range:</string>
    <string name="delivery_tip">Delivery Tip:</string>
    <string name="dollar_sign">$</string>
    <string name="back">Back</string>
    <string name="item_name">Item Name:</string>
    <string name="address">Address:</string>
    <string name="welcome">Welcome To Grocery!</string>
    <string name="descrip">The easy way to order and deliver!</string>
    <string name="quantity">Quantity:</string>
    <string name="map_view">Map</string>
    <string name="list_view">List</string>
    <string name="use_arrows">Tap Arrows to View Available Orders!</string>
    <string name="title_activity_maps">Map</string>
    <string name="deliver_to">Deliver to?</string>
</resources>
